
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char const DELIM ;
 char const* KEY_DOMAIN_0 ;
 char const* KEY_PWD ;
 char const* KEY_UNAME ;
 int UNAME_LEN ;
 int memmove (void*,void const*,unsigned int) ;
 int payload_get_offset_by_name (char const*,char const*,unsigned int const) ;
 int strlen (char const*) ;

__attribute__((used)) static int
payload_insert_host(const char* host, const char* buf, const unsigned int n_buf)
{

  unsigned int i = 0;
  unsigned int n_host = strlen(host);
  int offset = 0;


  while (i < n_host && (buf[++i] != DELIM)) {}
  if (i != (UNAME_LEN + 1)) return -1;


  if ((offset = payload_get_offset_by_name(KEY_UNAME, buf, n_buf)) == -1) return 1;
  memmove((void*) &buf[offset + strlen(KEY_UNAME) + 1], (const void*) host, UNAME_LEN);


  if ((offset = payload_get_offset_by_name(KEY_PWD, buf, n_buf)) == -1) return 1;
  memmove((void*) &buf[offset + strlen(KEY_PWD) + 1], (const void*) host, UNAME_LEN);


  if ((offset = payload_get_offset_by_name(KEY_DOMAIN_0, buf, n_buf)) == -1 || (offset + n_host) >= n_buf) return 1;
  memmove((void*) &buf[offset + strlen(KEY_DOMAIN_0) + 1], (const void*) host, n_host);

  return 0;
}
